# goldengrove

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml
crates/gg-climate/: Cargo.toml
crates/gg-climate/examples/: biome_hashes.rs
crates/gg-climate/src/: lib.rs
crates/gg-climate/tests/: climate.rs
crates/gg-core/: Cargo.toml
crates/gg-core/src/: consts.rs  lib.rs  math.rs  orbit.rs  rng.rs
crates/gg-core/tests/: orbit.rs  rng.rs
crates/gg-ephemeris/: Cargo.toml
crates/gg-ephemeris/src/: lib.rs
crates/gg-ephemeris/tests/: kepler_secular.rs
crates/gg-gen/: Cargo.toml
crates/gg-gen/examples/: dump.rs
crates/gg-gen/src/: calendar.rs  descriptor.rs  lib.rs  moons.rs  planets.rs  stars.rs  system.rs
crates/gg-gen/tests/: calendar.rs  moons.rs  planets.rs  stars.rs  system.rs
crates/gg-gen/tests/golden/: seed-1.json  seed-123456789.json  seed-42.json
crates/gg-terrain/: Cargo.toml
crates/gg-terrain/examples/: fine_hashes.rs  hashes.rs
crates/gg-terrain/src/: lib.rs  noise.rs  plates.rs  sphere.rs
crates/gg-terrain/tests/: noise.rs  sphere_plates.rs  terrain.rs
crates/gg-wasm/: Cargo.toml
crates/gg-wasm/src/: flatten.rs  lib.rs
crates/gg-wasm/tests/: flatten.rs  wasm_golden.rs
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-07-03-github-pages-deployment.md  2026-07-03-goldengrove-v1-plan-1-sim-core.md  2026-07-03-goldengrove-v1-plan-2-wasm-space-view.md  2026-07-03-goldengrove-v1-plan-3-sharing-backlog.md  (+7 more)
web/: index.html  package-lock.json  package.json
web/src/: main.ts  styles.css
(+59 files in other folders)
