[package]
name = "gg-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gg-core = { path = "../gg-core" }
gg-gen = { path = "../gg-gen" }
gg-ephemeris = { path = "../gg-ephemeris" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
